--- a/trinity/package.json
+++ b/trinity/package.json
@@ -23,6 +23,7 @@
     "expo-av": "~15.0.1",
     "expo-camera": "~16.0.5",
     "expo-constants": "~17.0.3",
+    "expo-device": "~7.0.1",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.2",
     "expo-router": "~4.0.5",
@@ -38,7 +39,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
     "react-native-web": "~0.19.10",
-    "expo-device": "~7.0.1"
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
