--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,7 +76,7 @@ services:
     ports:
       - "3002:3000"
     volumes:
-      - ${PWD}/frontend/frontoffice:/app:delegate
+      - ${PWD}/frontend/frontoffice:/app
       # - /app/node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
