--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,7 +77,7 @@ services:
       - "3002:3000"
     volumes:
       - ${PWD}/frontend/frontoffice:/app
-      # - /app/node_modules
+      - /app/node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
       - FAST_REFRESH=true
