--- a/ansible/playbooks/deploy.yml
+++ b/ansible/playbooks/deploy.yml
@@ -55,8 +55,8 @@
     # 6. Démarrer les services avec Doppler et docker-compose
     - name: Démarrer les services avec Doppler et docker-compose
       # command: "doppler run --config prd -- docker compose -f {{ remote_project_path }}/docker-compose.yml up -d"
-      command: "doppler run --config dev -- docker compose -f {{ remote_project_path }}/docker-compose.yml up -d --build"
+      command: "doppler run --config prd -- docker compose -f {{ remote_project_path }}/docker-compose.yml up -d --build"
       environment:
-        DOPPLER_TOKEN: "{{ lookup('env', 'DOPPLER_TOKEN2') }}"
+        DOPPLER_TOKEN: "{{ lookup('env', 'DOPPLER_TOKEN') }}"
       register: docker_compose_status
       failed_when: docker_compose_status.rc != 0
