--- a/frontend/frontoffice/Dockerfile.prod
+++ b/frontend/frontoffice/Dockerfile.prod
@@ -2,7 +2,7 @@ FROM node:23 AS development
 
 WORKDIR /app
 
-COPY package*.json ./
+COPY package.json package-lock.json ./
 RUN ls -la /app
 
 RUN npm install
@@ -12,7 +12,7 @@ FROM node:23 AS production
 
 WORKDIR /app
 
-COPY package*.json ./
+COPY package.json package-lock.json ./
 RUN npm install --production
 
 COPY . .
