--- a/trinity/package.json
+++ b/trinity/package.json
@@ -30,7 +30,7 @@
     "expo-splash-screen": "~0.29.10",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
-    "expo-web-browser": "~14.0.1",
+    "expo-web-browser": "14.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
