--- a/trinity/package.json
+++ b/trinity/package.json
@@ -24,6 +24,7 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "@tanstack/react-query": "^5.66.11",
     "axios": "^1.8.1",
+    "buffer": "^6.0.3",
     "expo": "^52.0.7",
     "expo-av": "~15.0.1",
     "expo-camera": "~16.0.5",
@@ -31,7 +32,9 @@
     "expo-device": "~7.0.1",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.2",
+    "expo-media-library": "^17.0.6",
     "expo-router": "~4.0.5",
+    "expo-sharing": "^13.0.1",
     "expo-splash-screen": "~0.29.10",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.3",
@@ -47,8 +50,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
     "react-native-web": "~0.19.10",
-    "react-navigation": "^5.0.0",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
